# permatracks_data_collection

./: .gitmodules  CMakeLists.txt  README.md  library.json
data/: mag_data_LIS3MDL_ARRAY_mean_2025Mar14_15h26min51s_calibration_x.txt  mag_data_LIS3MDL_ARRAY_mean_2025Mar14_15h32min12s_(1-10_3).txt  mag_data_LIS3MDL_ARRAY_mean_2025Mar14_15h39min41s_calibration_y.txt  mag_data_LIS3MDL_ARRAY_mean_2025Mar14_15h45min44s_calibration_z.txt  result_6_6_6_3_150_correct_coordinate_system_corrected.csv
data/examples/: calibration_2026-02-13_14-21-51.json  zeroing_2026-02-13_17-30-08.json
data/vicra_roms/: board.rom  magnet.rom
deprecated/: MiMedMagnetometerArraySerialConnection.h
include/: MagArrayMagneticFluxDensityDataFileReader.h  MagArrayMagneticFluxDensityDataFileWriter.h  MagArrayParser.h  SerialConnection.h  calibration.h  zeroing.h
scripts/: collect.py  collect_mimed_v11_sensor_array_data.py  collect_mimed_v1_sensor_array_data.py  collect_mimed_v2_sensor_array_data.py  parse_v11.py  track_optical.py
src/: MagArrayMagneticFluxDensityDataFileReader.cpp  MagArrayMagneticFluxDensityDataFileWriter.cpp  MagArrayParser.cpp  SerialConnection.cpp  zeroing.cpp
test/: test_permatracks_data_collection.cpp  test_permatracks_data_collection_file.cpp
